--- a/comet/View/PullRequestCollectionViewItem.xib
+++ b/comet/View/PullRequestCollectionViewItem.xib
@@ -7,27 +7,65 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PullRequestCollectionViewItem" customModule="comet" customModuleProvider="target">
             <connections>
+                <outlet property="authorImageView" destination="6At-4A-06S" id="p3Y-d6-Bzt"/>
                 <outlet property="background" destination="N2P-Fa-MG1" id="TCq-8Q-ieM"/>
+                <outlet property="commentCountLabel" destination="dxm-zw-K66" id="Q0L-I9-9Q5"/>
+                <outlet property="titleLabel" destination="ucs-x1-yMM" id="ogh-I0-bl1"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="40"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <box boxType="custom" cornerRadius="4" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="N2P-Fa-MG1">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="40"/>
+                <box boxType="custom" borderWidth="0.0" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="N2P-Fa-MG1">
+                    <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
                     <view key="contentView" id="AFa-A8-ihY">
-                        <rect key="frame" x="1" y="1" width="478" height="38"/>
+                        <rect key="frame" x="0.0" y="0.0" width="480" height="44"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <color key="borderColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </box>
+                <box boxType="custom" borderWidth="0.0" cornerRadius="12" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="gIV-0z-dfO">
+                    <rect key="frame" x="16" y="11" width="22" height="22"/>
+                    <view key="contentView" id="cGq-HN-iEi">
+                        <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dxm-zw-K66">
+                                <rect key="frame" x="0.0" y="4" width="22" height="14"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" alignment="center" drawsBackground="YES" id="tKZ-Gu-md8">
+                                    <font key="font" metaFont="message" size="11"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="dxm-zw-K66" firstAttribute="centerY" secondItem="cGq-HN-iEi" secondAttribute="centerY" id="k9q-XE-kcE"/>
+                            <constraint firstAttribute="trailing" secondItem="dxm-zw-K66" secondAttribute="trailing" id="qvm-tF-sTB"/>
+                            <constraint firstItem="dxm-zw-K66" firstAttribute="leading" secondItem="cGq-HN-iEi" secondAttribute="leading" id="y5G-ez-XI9"/>
+                        </constraints>
+                    </view>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="22" id="bLv-Or-q4S"/>
+                        <constraint firstAttribute="width" constant="22" id="dUh-9b-frz"/>
+                    </constraints>
+                    <color key="fillColor" white="0.74071596745616441" alpha="1" colorSpace="calibratedWhite"/>
+                </box>
+                <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6At-4A-06S">
+                    <rect key="frame" x="50" y="8" width="28" height="28"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="28" id="kId-fk-V6B"/>
+                        <constraint firstAttribute="height" constant="28" id="vYc-Ct-9ze"/>
+                    </constraints>
+                    <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" id="ryh-bx-jje"/>
+                </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ucs-x1-yMM">
-                    <rect key="frame" x="18" y="12" width="444" height="16"/>
-                    <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="p1F-PW-RJa">
+                    <rect key="frame" x="90" y="14" width="370" height="16"/>
+                    <textFieldCell key="cell" lineBreakMode="clipping" drawsBackground="YES" id="p1F-PW-RJa">
                         <font key="font" usesAppearanceFont="YES"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
@@ -36,13 +74,16 @@
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ucs-x1-yMM" secondAttribute="trailing" constant="20" id="13q-ny-LuF"/>
+                <constraint firstItem="ucs-x1-yMM" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="45e-7T-gq3"/>
+                <constraint firstItem="6At-4A-06S" firstAttribute="leading" secondItem="dxm-zw-K66" secondAttribute="trailing" constant="12" id="55P-kH-jeL"/>
+                <constraint firstItem="6At-4A-06S" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="63R-gu-Qb0"/>
                 <constraint firstItem="N2P-Fa-MG1" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="6Tb-Kk-EEe"/>
                 <constraint firstAttribute="trailing" secondItem="N2P-Fa-MG1" secondAttribute="trailing" id="7LE-9q-O4T"/>
                 <constraint firstItem="N2P-Fa-MG1" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="Jsg-SO-cZf"/>
-                <constraint firstItem="ucs-x1-yMM" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="MJs-gd-rwA"/>
-                <constraint firstAttribute="bottom" secondItem="ucs-x1-yMM" secondAttribute="bottom" constant="12" id="auZ-pI-5XD"/>
+                <constraint firstItem="ucs-x1-yMM" firstAttribute="leading" secondItem="6At-4A-06S" secondAttribute="trailing" constant="12" id="NGJ-8N-hUy"/>
+                <constraint firstItem="gIV-0z-dfO" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="mBB-j4-orI"/>
                 <constraint firstAttribute="bottom" secondItem="N2P-Fa-MG1" secondAttribute="bottom" id="oO4-S0-kq7"/>
-                <constraint firstItem="ucs-x1-yMM" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="12" id="s29-vn-KwJ"/>
+                <constraint firstItem="gIV-0z-dfO" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="16" id="stR-3K-2Kx"/>
             </constraints>
             <point key="canvasLocation" x="139" y="154"/>
         </customView>
