--- a/comet/View/PullRequestCollectionViewItem.xib
+++ b/comet/View/PullRequestCollectionViewItem.xib
@@ -73,14 +73,14 @@
                     </textFieldCell>
                 </textField>
                 <box boxType="custom" borderWidth="0.0" title="Box" transparent="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YzC-dd-kKe" customClass="ReviewerIconContainerView" customModule="comet" customModuleProvider="target">
-                    <rect key="frame" x="400" y="0.0" width="80" height="44"/>
+                    <rect key="frame" x="400" y="0.0" width="64" height="44"/>
                     <view key="contentView" id="r6f-eF-QXo">
-                        <rect key="frame" x="0.0" y="0.0" width="80" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="64" height="44"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="Qel-eA-k4A"/>
-                        <constraint firstAttribute="width" constant="80" id="xZ9-Bo-OqP"/>
+                        <constraint firstAttribute="width" constant="64" id="xZ9-Bo-OqP"/>
                     </constraints>
                     <color key="borderColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
@@ -100,7 +100,7 @@
                 <constraint firstItem="ucs-x1-yMM" firstAttribute="leading" secondItem="6At-4A-06S" secondAttribute="trailing" constant="12" id="NGJ-8N-hUy"/>
                 <constraint firstItem="YzC-dd-kKe" firstAttribute="leading" secondItem="ucs-x1-yMM" secondAttribute="trailing" constant="12" id="lb6-Mb-pDa"/>
                 <constraint firstItem="gIV-0z-dfO" firstAttribute="centerY" secondItem="Hz6-mo-xeY" secondAttribute="centerY" id="mBB-j4-orI"/>
-                <constraint firstAttribute="trailing" secondItem="YzC-dd-kKe" secondAttribute="trailing" id="mU1-xJ-Cdv"/>
+                <constraint firstAttribute="trailing" secondItem="YzC-dd-kKe" secondAttribute="trailing" constant="16" id="mU1-xJ-Cdv"/>
                 <constraint firstAttribute="bottom" secondItem="N2P-Fa-MG1" secondAttribute="bottom" id="oO4-S0-kq7"/>
                 <constraint firstItem="gIV-0z-dfO" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="16" id="stR-3K-2Kx"/>
             </constraints>
