--- a/comet/Base.lproj/Main.storyboard
+++ b/comet/Base.lproj/Main.storyboard
@@ -63,16 +63,24 @@
                                     <segue destination="xeO-yb-MNE" kind="embed" id="5yM-UY-YRR"/>
                                 </connections>
                             </containerView>
+                            <progressIndicator wantsLayer="YES" maxValue="100" displayedWhenStopped="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="qa6-B2-ku2">
+                                <rect key="frame" x="39" y="375" width="16" height="16"/>
+                            </progressIndicator>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="qa6-B2-ku2" firstAttribute="centerY" secondItem="jak-Yj-KRN" secondAttribute="centerY" id="6sM-OG-SMI"/>
                             <constraint firstItem="jak-Yj-KRN" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="9re-Ol-5Ox"/>
                             <constraint firstAttribute="bottom" secondItem="zZ1-xP-xJs" secondAttribute="bottom" constant="10" id="Dfj-pk-7dE"/>
                             <constraint firstItem="jak-Yj-KRN" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="8" id="Y2t-fh-WIS"/>
                             <constraint firstAttribute="trailing" secondItem="zZ1-xP-xJs" secondAttribute="trailing" id="cKO-F4-4v8"/>
                             <constraint firstItem="zZ1-xP-xJs" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" id="eyD-Jk-Fp7"/>
                             <constraint firstItem="zZ1-xP-xJs" firstAttribute="top" secondItem="jak-Yj-KRN" secondAttribute="bottom" constant="10" id="vd9-dp-aMK"/>
+                            <constraint firstItem="qa6-B2-ku2" firstAttribute="leading" secondItem="jak-Yj-KRN" secondAttribute="trailing" constant="8" id="xmg-II-asZ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="updatingIndicator" destination="qa6-B2-ku2" id="dTl-4e-qvy"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -190,7 +198,7 @@
                                         <autoresizingMask key="autoresizingMask"/>
                                     </scroller>
                                     <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="NdY-M4-Hbe">
-                                        <rect key="frame" x="424" y="0.0" width="16" height="289"/>
+                                        <rect key="frame" x="434" y="0.0" width="16" height="281"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                     </scroller>
                                 </scrollView>
