--- a/comet/View/RepositoryTabItemView.xib
+++ b/comet/View/RepositoryTabItemView.xib
@@ -10,7 +10,7 @@
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe" customClass="RepositoryTabItemView" customModule="comet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="328" height="32"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tR0-dw-jZU">
                     <rect key="frame" x="160" y="4" width="8" height="16"/>
